# xref_gen

./: Cargo.toml  README.md
resources/: xrefgen.py
src/: ghidra.rs  graph.rs  il2cpp.rs  main.rs  trace.rs
