[package]
name = "xref_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
object = "0.30"
cpp_demangle = "0.3"
petgraph = "0.6"
bad64 = "0.6"
clap = { version = "3.1.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.16"
il2cpp_metadata_raw = { git = "https://github.com/StackDoubleFlow/brocolib.git", branch = "il2cpp_v29" }
il2cpp_binary = { git = "https://github.com/StackDoubleFlow/brocolib.git", branch = "il2cpp_v29" }
byteorder = "1.4"
